# jobs-rs

./: .gitignore  Cargo.toml  README.md  counter.db  docker-compose.yml  jobs.db  lock.db  rustc-ice-2024-01-01T21_45_18-55271.txt
examples/: Cargo.toml  app.rs  hello.rs  job_repo_demo.rs  lock.db  lock_repo_demo.rs  proj-gen.rs  simple.rs  simple_2.rs  simple_mongo.rs  try.rs
src/: error.rs  executor.rs  job.rs  lib.rs  lib_old.rs  lock.rs  manager.rs  schedule.rs  test.rs
src/repos/: lock_repo.rs  mod.rs  mongo.rs  pickledb.rs
src/repos/mongo/: job.rs  mod.rs
src/repos/pickledb/: job.rs  lock.rs  mod.rs
