[package]
name = "jobs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tokio-retry = "0.3"
serde = {version = "1.0.188"}
async-trait = "0.1"
futures = { version = "0.3", default-features = false }
pickledb = "0.5.1"
cron-parser = "0.8.0"
chrono = "0.4.31"
#futures = { version = "0.3", default-features = false }