[package]
name = "jobs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tokio-retry = "0.3"
serde = {version = "1.0.188"}
async-trait = "0.1"
futures = { version = "0.3", default-features = false }
pickledb = "0.5.1"
chrono = {version = "0.4.31", features = ["default"]}
cron = "0.12.0"
mongodb = "2.6.0"
#futures = { version = "0.3", default-features = false }
[[bin]]
name = "jm"
path  = "examples/simple.rs"