[package]
name = "jobs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal", "sync", "net"] }
tokio-retry = "0.3"
serde = {version = "1.0.188"}
async-trait = "0.1"
futures = { version = "0.3", default-features = false }
pickledb = "0.5.1"
chrono = {version = "0.4.31", features = ["default"]}
cron = "0.12.0"
derive_more = "0.99.17"
tokio-timer = "0.2.13"
log = "0.4.20"
simple_logger = "4.2.0"
mongodb = "2.6.0"
thiserror = "1"
rand = "0.8"
serde_json = "1.0.109"